# trading-bootcamp-platform

./: .gitignore
client-py/quantz/: analyze.ipynb  arb.py  avg_arb.py  config.py  dash.py  dashboard.py  diff_arb.py  do_arb.py  example.py  exposure.py  mapping.py  market.ipynb  market.py  pricing.ipynb  profits.py  pyproject.toml  repl.py  sum_arb.py  test_arb.py  utils.py
